# stock-positions-history

./: .gitignore  README.md  auto_workflow.bat  pyproject.toml
stock-positions-backend/: data_manager.py  easytrader_patch.py  main.py  start_web.py  web_app.py
stock-positions-frontend/: history.html  index.html
stock-positions-history/: 2025-07-27.json  2025-07-28.json  2025-07-29.json
templates/: history.html  index.html
