[project]
name = "stockdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easytrader>=0.23.7",
    "pytesseract>=0.3.13",
    "pywin32>=311",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.0",
]
